fix: resolve remaining issues #1 #4 #5 #6
- Rename package DTO → dto (java:S120, 7 files)
- Extract string constants: error/message/success → ApiConstants (java:S1192, 15 occurrences)
- Remove unused import java.util.stream.Collectors
- Replace .collect(Collectors.toList()) → .toList() (java:S6204)